spring boot application user manage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8080
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+management.security.enabled=false
+# App Properties
+app.email.pattern=^(.+)@(\\S+)$
+app.password.pattern=^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#&()–[{}]:;',?/*~$^+=<>]).{8,20}$
+app.jwt.secret=EWn1ftvkpcuxv8xyRFBoA+C2FYYNeNRv2u+UIIWDxTA=
+app.jwt.expiration=86400000
